--- a/assessment/sinatra/users/new.html
+++ b/assessment/sinatra/users/new.html
@@ -2,3 +2,27 @@
 
 <!-- Write out all of the appropriate html for a user who goes to the form to create a new user -->
 <!-- Imagine that a user both a name and a hometown -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>New User</title>
+  </head>
+  <body>
+    <h1>Yo! You want to join as a user?!</h1>
+    <form action="/users" method="post">
+
+      <br></br>
+
+      <input type="text" name="name" placeholder="Yo Name">
+
+      <br></br>
+
+      <input type="text" name="hometown" placeholder="Where you from?">
+
+      <br></br>
+
+      <input type="submit" value="I'M DONE">
+    </form>
+  </body>
+</html>
